--- a/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/components/home/home.component.html
+++ b/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/components/home/home.component.html
@@ -1,12 +1,12 @@
-<div class="card row mx-3 mb-2 mt-3">
+<div class="card row mx-3 mb-3 mt-3">
   <div class="card-header text-center">
     Featured
   </div>
   <div class="card-body">
     <h5 class="card-title text-center">University Management System</h5>
-    <p class="card-text text-center">UniMS is a web digital solution that helps automate tasks. Ranging from registering students, admitting students, onboarding them, managing their fees, managing payroll for lecturers to helping students access online learning, classroom training etc. a university management system is a complete solution. Reducing manual labor and intervention, this system ensures accuracy, transparency, reliability, and integrity of records, information, intellectual property and data.</p>
+    <p class="card-text text-center">UniMS is a web based digital solution that helps automate tasks. Ranging from registering students, admitting students, onboarding them, managing their fees, managing payroll for lecturers to helping students access online learning, classroom training etc. UniMS is a complete solution and this system ensures accuracy, transparency, reliability, and integrity of records, information, intellectual property and data.</p>
     <div class="row mx-4 mt-4">
-      <div class="col mb-2">
+      <div class="col mb-4">
         <div class="card" style="width: 15rem; height: 23rem;">
           <img src="./assets/students.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -16,7 +16,7 @@
           </div>
         </div>
       </div>
-      <div class="col mb-2">
+      <div class="col mb-4">
         <div class="card" style="width: 15rem; height: 23rem;">
           <img src="./assets/subjects.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -26,7 +26,7 @@
           </div>
         </div>
       </div>
-      <div class="col mb-2">
+      <div class="col mb-4">
         <div class="card" style="width: 15rem; height: 23rem;">
           <img src="./assets/courses.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-      <div class="col mb-2">
+      <div class="col mb-4">
         <div class="card" style="width: 15rem; height: 23rem;">
           <img src="./assets/lecturers.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -46,7 +46,7 @@
           </div>
         </div>
       </div>
-      <div class="col mb-2">
+      <div class="col mb-4">
         <div class="card" style="width: 15rem; height: 23rem;">
           <img src="./assets/employees.jpg" class="card-img-top" alt="...">
           <div class="card-body">
