--- a/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/components/lecturers/add-lecturer/add-lecturer.component.html
+++ b/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/components/lecturers/add-lecturer/add-lecturer.component.html
@@ -3,16 +3,16 @@
 
   <div class="row">
       <div class="col-6">
-          <form #form="ngForm" (ngSubmit)="addLecturer()" class="was-validated">
+          <form #form="ngForm" (ngSubmit)="addLecturer()">
               
               <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control is-invalid" id="name" name="name" [(ngModel)]="addLecturerRequest.name" required>
+                <input type="text" class="form-control" id="name" name="name" [(ngModel)]="addLecturerRequest.name">
               </div>
 
               <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control is-invalid" id="email" name="email" [(ngModel)]="addLecturerRequest.email" required>
+                  <input type="email" class="form-control" id="email" name="email" [(ngModel)]="addLecturerRequest.email">
                 </div>
 
                 <div class="mb-3">
