Added Practitioner screen - Angular

--- a/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/app.component.html
+++ b/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/app.component.html
@@ -46,6 +46,7 @@
             Anand
           </a>
           <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="practitioners">Practitioner List</a></li>
             <li><a class="dropdown-item" routerLink="employees">Employee List</a></li>
             <li><a class="dropdown-item" routerLink="subjects">Subject List</a></li>
           </ul>
