Added Client screen - Angular

--- a/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/app.component.html
+++ b/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/app.component.html
@@ -10,7 +10,7 @@
         <li class="nav-item">
           <!-- <a class="nav-link active" aria-current="page" routerLink="">Home</a> -->
           <a class="navbar-brand pt-0" href="#" aria-label="UniMS">
-            <img src="./assets/UniMS_logo_light.svg" alt="UniMS Logo" width="100px" height="19px">
+            <img src="./assets/pbshub.png" alt="UniMS Logo" width="100px" height="19px">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,6 +46,7 @@
             Anand
           </a>
           <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="clients">Client List</a></li>
             <li><a class="dropdown-item" routerLink="practitioners">Practitioner List</a></li>
             <li><a class="dropdown-item" routerLink="employees">Employee List</a></li>
             <li><a class="dropdown-item" routerLink="subjects">Subject List</a></li>
