--- a/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/app.component.html
+++ b/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/app.component.html
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
-    <!-- <a class="navbar-brand" href="#">UNI Management</a> -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,7 +7,6 @@
       <ul class="navbar-nav">
 
         <li class="nav-item">
-          <!-- <a class="nav-link active" aria-current="page" routerLink="">Home</a> -->
           <a class="navbar-brand pt-0" href="#" aria-label="UniMS">
             <img src="./assets/pbshub.png" alt="UniMS Logo" width="100px" height="19px">
           </a>
@@ -17,7 +15,6 @@
           </button>
         </li>
 
-        <!-- Ashish -->
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -26,48 +23,14 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Ashish
+            Dashboard
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="students">Student List</a></li>
-            <li><a class="dropdown-item" routerLink="courses">Course List</a></li>
-          </ul>
-        </li>
-
-        <!-- Anand -->
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Anand
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="clients">Client List</a></li>
             <li><a class="dropdown-item" routerLink="practitioners">Practitioner List</a></li>
-            <li><a class="dropdown-item" routerLink="employees">Employee List</a></li>
-            <li><a class="dropdown-item" routerLink="subjects">Subject List</a></li>
+            <li><a class="dropdown-item" routerLink="clients">Client List</a></li>
           </ul>
         </li>
 
-        <!-- Sagar -->
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Sagar
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="lecturers">Lecturer List</a></li>
-          </ul>
-        </li>
     </ul>
     </div>
   </div>
