--- a/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/app.component.html
+++ b/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/app.component.html
@@ -34,6 +34,11 @@
     </ul>
     </div>
   </div>
+  <div class="d-flex">
+    <div class="ms-auto mx-5">
+      <button type="button" class="btn btn-primary active" routerLink="login">Sign in</button>
+    </div>
+  </div>
 </nav>
 
 <router-outlet></router-outlet>
