--- a/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/components/home/home.component.html
+++ b/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/components/home/home.component.html
@@ -3,16 +3,17 @@
     Featured
   </div>
   <div class="card-body">
-    <h5 class="card-title text-center">University Management System</h5>
-    <p class="card-text text-center">UniMS is a web based digital solution that helps automate tasks. Ranging from registering students, admitting students, onboarding them, managing their fees, managing payroll for lecturers to helping students access online learning, classroom training etc. UniMS is a complete solution and this system ensures accuracy, transparency, reliability, and integrity of records, information, intellectual property and data.</p>
+    <h5 class="card-title text-center">Positive Behaviour Support Hub</h5>
+    <p class="card-text text-center">PBShub is a management system that would streamline client information to make it easier for Behaviour Practitioners and Support Workers to access the information, track progress, and provide better service.
+    </p>
     <div class="row mx-4 mt-4">
       <div class="col mb-4">
         <div class="card" style="width: 15rem; height: 23rem;">
           <img src="./assets/students.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Students</h5>
-            <p class="card-text">Here you can add new students, edit information of current students, and delete existing students.</p>
-            <a routerLink="students" class="btn btn-primary">See more</a>
+            <h5 class="card-title">Practioners</h5>
+            <p class="card-text">Here you can add new practioners, edit information of current practioners, and delete existing practioners.</p>
+            <a routerLink="practitioners" class="btn btn-primary">See more</a>
           </div>
         </div>
       </div>
@@ -20,9 +21,9 @@
         <div class="card" style="width: 15rem; height: 23rem;">
           <img src="./assets/subjects.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Subjects</h5>
-            <p class="card-text">Here you can add new subjects, edit information for current subjects, and delete existing subjects.</p>
-            <a routerLink="subjects" class="btn btn-primary">See more</a>
+            <h5 class="card-title">Clients</h5>
+            <p class="card-text">Here you can add new clients, edit information for current clients, and delete existing clients.</p>
+            <a routerLink="clients" class="btn btn-primary">See more</a>
           </div>
         </div>
       </div>
@@ -30,9 +31,9 @@
         <div class="card" style="width: 15rem; height: 23rem;">
           <img src="./assets/courses.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Courses</h5>
-            <p class="card-text">Here you can add new courses, edit information of current courses, and delete existing courses.</p>
-            <a routerLink="courses" class="btn btn-primary card-btn-bottom">See more</a>
+            <h5 class="card-title">Support Staff</h5>
+            <p class="card-text">Here you can add new staff, edit information of current staff, and delete existing support staff.</p>
+            <a routerLink="" class="btn btn-primary card-btn-bottom">See more</a>
           </div>
         </div>
       </div>
@@ -40,9 +41,9 @@
         <div class="card" style="width: 15rem; height: 23rem;">
           <img src="./assets/lecturers.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Lecturers</h5>
-            <p class="card-text">Here you can add new lecturers, edit information of current lecturers, and delete existing lecturers.</p>
-            <a routerLink="lecturers" class="btn btn-primary">See more</a>
+            <h5 class="card-title">Reports</h5>
+            <p class="card-text">Here you can add new reports, edit information of current reports, and delete existing reports.</p>
+            <a routerLink="" class="btn btn-primary">See more</a>
           </div>
         </div>
       </div>
@@ -50,9 +51,9 @@
         <div class="card" style="width: 15rem; height: 23rem;">
           <img src="./assets/employees.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Employees</h5>
-            <p class="card-text">Here you can add new employees, edit information of current employees, and delete existing employees.</p>
-            <a routerLink="lecturers" class="btn btn-primary">See more</a>
+            <h5 class="card-title">Contacts</h5>
+            <p class="card-text">Here you can add new contacts, edit information of current contacts, and delete existing contacts.</p>
+            <a routerLink="" class="btn btn-primary">See more</a>
           </div>
         </div>
       </div>
