--- a/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/components/home/home.component.html
+++ b/WebApplication3tierApp/AngularApp/CRUD.UI/src/app/components/home/home.component.html
@@ -33,7 +33,7 @@
           <div class="card-body">
             <h5 class="card-title">Support Staff</h5>
             <p class="card-text">Here you can add new staff, edit information of current staff, and delete existing support staff.</p>
-            <a routerLink="" class="btn btn-primary card-btn-bottom">See more</a>
+            <a routerLink="" class="btn btn-primary card-btn-bottom disabled">See more</a>
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
           <div class="card-body">
             <h5 class="card-title">Reports</h5>
             <p class="card-text">Here you can add new reports, edit information of current reports, and delete existing reports.</p>
-            <a routerLink="" class="btn btn-primary">See more</a>
+            <a routerLink="" class="btn btn-primary disabled">See more</a>
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
           <div class="card-body">
             <h5 class="card-title">Contacts</h5>
             <p class="card-text">Here you can add new contacts, edit information of current contacts, and delete existing contacts.</p>
-            <a routerLink="" class="btn btn-primary">See more</a>
+            <a routerLink="" class="btn btn-primary disabled">See more</a>
           </div>
         </div>
       </div>
